alignment fix

--- a/src/Components/Events/Main/Main.scss
+++ b/src/Components/Events/Main/Main.scss
@@ -93,10 +93,10 @@
 
         &__details {
           display: flex;
-          padding: 10px;
+          padding: 4px;
 
           @media screen and (max-height: 600px) {
-            padding: 5px;
+            padding: 4px;
           }
         }
 
@@ -107,11 +107,12 @@
           font-family: "Gilroy-Light";
           line-height: 1.14;
           letter-spacing: normal;
+          width: 90%;
+          padding-left: 5px;
 
           @media screen and (max-width: $mobile-view) {
             padding-bottom: 10px;
             font-size: 20px;
-            width: 100%;
             height: max-content;
           }
 
@@ -128,10 +129,11 @@
           font-style: normal;
           line-height: 1.14;
           letter-spacing: normal;
+          margin-top: 10px;
 
           @media screen and (max-width: $mobile-view) {
             width: 100%;
-            margin: 0 auto;
+            margin: 0px auto;
             padding: 0px;
             font-size: 17px;
           }
@@ -142,6 +144,11 @@
 
           &__colorchange {
             color: #03b0ef;
+          }
+
+          &__nochange {
+            margin-left: 4px;
+            margin-top: 1px;
           }
         }
       }
@@ -155,6 +162,7 @@
         &__main {
           display: flex;
           align-items: center;
+          padding: 4px;
         }
 
         @media screen and (max-width: $mobile-view) {
@@ -167,7 +175,7 @@
         &__colorchange {
           color: #03b0ef;
           text-transform: uppercase;
-          margin-top: 5px;
+          // margin-top: 5px;
         }
 
         &__reg {
@@ -200,6 +208,7 @@
       text-transform: uppercase;
       box-shadow: 0 3px 6px 0 rgba(105, 224, 216, 0.16);
       background-color: #1bbcf1;
+      cursor: pointer;
 
       @media screen and (max-width: $mobile-view) {
         position: fixed;
